# mllm-mmrotate

./: .gitignore  Data.md  Enviroment.md  README.md  florence-2-b_vis1024-lang2048_dior-v2_b2x8xga2-100e-slurm.sh  pyproject.toml
lmmrotate/: dataset.py  eval.py  train.py  trainer.py
lmmrotate/models/: __init__.py  api.py  version.py
lmmrotate/modules/: f1_metric.py  fair_dataset.py  fair_metric.py  rsar_dataset.py
playground/: convert_dota_for_sft.py  demo.ipynb  eval_mmrotate_detector_mapnc.py  evaluate_without_scores.ipynb  get_num_params.ipynb  gradio_app_poly.py  map_nc_robustness_cal.py  map_nc_robustness_draw.ipynb  mmrotate_img_split.py  mmrotate_test.py  mmrotate_train.py
playground/mmrotate_configs/: dior-1024.py  dior.py  fair1m.py  rotated-fcos-le90_r50_fpn_1x_dior-1024.py  rotated-fcos-le90_r50_fpn_1x_dior.py  rotated-fcos-le90_r50_fpn_1x_dota-train.py  rotated-fcos-le90_r50_fpn_1x_fair.py  rotated-fcos-le90_r50_fpn_1x_rsar-1024.py  rotated-fcos-le90_r50_fpn_1x_rsar.py  rotated-fcos-le90_r50_fpn_6x_srsdd.py  rotated-retinanet-rbox-le90_r50_fpn_1x_dior-1024.py  rotated-retinanet-rbox-le90_r50_fpn_1x_dota-train.py  rotated-retinanet-rbox-le90_r50_fpn_1x_dota.py  rsar-1024.py  rsar.py  srsdd.py  (+4 more)
scripts/: eval_slurm.sh  eval_standalone.sh  florence-2-l_vis1024-lang2048_dota1-v2_b1x1xga32-50e.sh  florence-2-l_vis1024-lang2048_dota1-v2_b2x16-100e.sh  florence-2-l_vis1024-lang2048_dota1-v2_b2x2xga8-50e.sh  florence-2-l_vis1024-lang2048_dota1-v2_b2x4xga4-50e.sh  florence-2-l_vis1024-lang2048_dota1-v2_b2x8xga2-100e.sh
unit_test/: develop_qwen.py
(+32 files in other folders)
